para_se_basear/Trab_Anna/CodeGeneration/Tests/Error/30.AMZ
// ok
int func1() {
	return 0;
}

// ok
int func2() {
	int a = func1();
	return a;
}

// error
int func3() {
	func1();
	func2();
	func(); // not in scope
	return 1;
}
